@@ -148,10 +148,30 @@ TCHAR* Chat_DoRtfToTags(char* pszText, SESSION_INFO* si)
 					bTextHasStarted = bJustRemovedRTF = TRUE;
 					iRemoveChars = 4;
 					strcpy(InsertThis, "\n");
-				} else if (!memcmp(p1, "\\emdash", 7) || !memcmp(p1, "\\endash", 7)) {   // dashes
+				} else if (!memcmp(p1, "\\endash", 7)) {
 					bTextHasStarted = bJustRemovedRTF = TRUE;
 					iRemoveChars = 7;
-					strcpy(InsertThis, "-");
+#if defined(_UNICODE)
+					mir_snprintf(InsertThis, SIZEOF(InsertThis), "\xE2\x80\x93");
+#else
+					mir_snprintf(InsertThis, SIZEOF(InsertThis), "\x96");
+#endif
+				} else if (!memcmp(p1, "\\emdash", 7)) {
+					bTextHasStarted = bJustRemovedRTF = TRUE;
+					iRemoveChars = 7;
+#if defined(_UNICODE)
+					mir_snprintf(InsertThis, SIZEOF(InsertThis), "\xE2\x80\x94");
+#else
+					mir_snprintf(InsertThis, SIZEOF(InsertThis), "\x97");
+#endif
+				} else if (!memcmp(p1, "\\bullet", 7)) {
+					bTextHasStarted = bJustRemovedRTF = TRUE;
+					iRemoveChars = 7;
+#if defined(_UNICODE)
+					mir_snprintf(InsertThis, SIZEOF(InsertThis), "\xE2\x80\xA2");
+#else
+					mir_snprintf(InsertThis, SIZEOF(InsertThis), "\x95");
+#endif
 				} else if (!memcmp(p1, "\\line", 5)) {  // newline
 					bTextHasStarted = bJustRemovedRTF = TRUE;
 					iRemoveChars = 5;
